Header now has correct size on iOS devices, things are no longer covered by the status bar. Left side menu sometimes scrolls to top when opening, should always do that. Chatroom names now get marked when clicked and menu closes when changing chatroom. Title in header now updates with chatroom name.

--- a/shutAppMobile/www/css/style.css
+++ b/shutAppMobile/www/css/style.css
@@ -70,6 +70,7 @@ form {
 .divsend {
   background-color: #efefef;
   margin-left: 7px;
+  padding: 2.5px 0;
 }
 .iconsend {
   background-color: #efefef;
@@ -77,14 +78,48 @@ form {
 }
 .nopadtop {
   padding-top: 0px;
+  margin: 0.5rem 0;
 }
 .messages-content{
   bottom: 2.3rem;
 }
 .message-input-field {
+  background-color: #efefef;
+  margin: 0.5rem 0;
   width: 100%;
+  resize: none;
 }
 .markedroom {
   background-color: #DDDDFF;
   color: #595959;
+}
+/*Disabling platform specific tweaks */
+.platform-ios.platform-cordova:not(.fullscreen) .bar-header {
+  height: 44px !important;
+}
+.platform-ios.platform-cordova:not(.fullscreen) .bar-header:not(.bar-subheader) {
+  height: 44px !important;
+}
+
+.platform-ios.platform-cordova:not(.fullscreen) .bar-header:not(.bar-subheader).item-input-inset .item-input-wrapper {
+  margin-top: 0px !important;
+}
+
+.platform-ios.platform-cordova:not(.fullscreen) .bar-header:not(.bar-subheader) > * {
+  margin-top: 0px !important;
+}
+
+.platform-ios.platform-cordova:not(.fullscreen) .tabs-top > .tabs, .platform-ios.platform-cordova:not(.fullscreen) .tabs.tabs-top {
+  top: 44px !important;
+}
+
+.platform-ios.platform-cordova:not(.fullscreen) .has-header, .platform-ios.platform-cordova:not(.fullscreen) .bar-subheader {
+  top: 44px !important;
+}
+
+.platform-ios.platform-cordova:not(.fullscreen) .has-subheader {
+  top: 88px !important;
+}
+ion-nav-view {
+  border-top: 1px solid #d7d7d7;
 }
